Always show scrollbar to prevent flickering

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,8 @@
 /* purgecss start ignore */
+body {
+  overflow-y: scroll;
+}
+
 .page {
   &-enter-active,
   &-leave-active {
